# bam

./: .gitignore  .readthedocs.yaml  Makefile  README.md  R_identification.py  XM430_BAM_Guide.md  actuator.py  all_record.py  correct_speed_units.py  dataset.py  demo.py  drive_backdrive.py  dynamixel.py  estimate_h.py  estimate_kt.py  fit.py  friction.py  friction_net.py  identify_error_gain.py  integrate-learn.py  integrate-train.sh  jitter.py  learn.py  logs.py  mae.py  message.py  model.py  plot.py  plot.sh  plot_test.py  process.py  pyproject.toml  record.py  requirements.txt  requirements_2R.txt  requirements_bam.txt  run.sh  run_all.sh  setup.py  simulate.py  (+8 more)
.github/workflows/: build.yml  run_uv.yml  wheels.yml
2R/: README.md  mae.sh  plot.sh  sim.py
2R/2r_erob/: 80i_v5.part  bati_erob80.part  bati_erob80.stl  bras1.part  bras1.stl  bras2.part  bras2.stl  config.json  frame.part  frame.stl  robot.urdf  robot.xml  scene.xml  weight.part  weight.stl
2R/2r_mx/: base_mx106.part  config.json  dc08_m01_dummy.part  ecrou_2.5.part  first_segment_mix.part  hn05-i101.part  m2.5x20__list_khwhpz53lblddb__20.part  m4x25__list_ghzg3zmty1cemm__30.part  robot.xml
2R/2r_mx106/: base.part  dc08_m01_dummy.part  ecrou_2.5.part  first_segment.part  first_segment.stl  m2.5x10__list_khwhpz53lblddb__10.stl  m2.5x12__list_khwhpz53lblddb__12.part  m4x25__list_ghzg3zmty1cemm__30.part  mid_part.part  robot.urdf  robot.xml  scene.xml  sw_mx106_segment.part  sw_mx106_segment.stl
2R/2r_mx64/: base_mx64.part  base_mx64.stl  config.json  dc05_m01_dummy.part  dc05_m01_dummy.stl  ecrou_2.5.part  ecrou_4.part  first_segment_mx64.part  first_segment_mx64.stl  hn05-i101.part  m2.5x12__list_khwhpz53lblddb__12.part  m2.5x20__list_khwhpz53lblddb__20.part  mid_part_mx64.part  mid_part_mx64.stl  robot.urdf  robot.xml  sw_mx64_segment.part  weight_985.part
2R/2r_mx_mix/: base_mx106.stl  dc05_m01_dummy.part  first_segment_mix.stl  m2.5x12__list_khwhpz53lblddb__12.part  m2.5x6__list_khwhpz53lblddb__6.part  mid_part.part  mid_part.stl  robot.urdf  sw_mx64_segment.stl
2R/sw_106/: config.json  ecrou_4.part  hn05-i101.part  m2.5x10__list_khwhpz53lblddb__10.part  m2.5x6__list_khwhpz53lblddb__6.part  robot.urdf  robot.xml  weight_985.part  weight_985.stl
atomic/: README.md  no_load_speed.py  simulate.py  tools.py
atomic/data/: pwm_mx106.json
bam/: actuator.py  actuators.py  animate.py  drive_backdrive.py  export_values.py  fit.py  jitter.py  logs.py  mae.py  message.py  mjlab.py  model.py  mujoco.py  parameter.py  plot.py  process.py  sensitivity.py  simulate.py  testbench.py  testbench_mujoco.py  to_mujoco.py  trajectory.py  trajectory_sim.py  wip.py
bam/_mujoco/: all_record.py  record.py  record_synchro.py
bam/dynamixel/: actuator.py  all_record.py  all_record_pypot.py  dynamixel.py  io_330.py  record.py  record_2R.py  record_pypot.py  trajectory_2R.py
bam/erob/: __init__.py  actuator.py  all_record.py  etherban.py  generate_protobuf.sh  record.py  record_2R.py  record_2r.py  static.py  trajectory_2R.py
bam/feetech/: README.md  actuator.py  all_record.py  all_record_feetech_sdk.py  feetech.py  feetech_pwm_control.py  record.py  record_feetech_sdk.py
bam/isaac/: record.py
bam/isaac_identification_rig/: identification_rig.py
bam/linear/: linear.py  trajectory.py
bam/mujoco_identification_rig/: identification_rig.py
bam/params/: README.md
bam/unitree/: actuator.py
bam/xl330/: actuator.py  all_record.py  record.py
data/: friction_1.json  pwm_mx64.json  velocity_mx106.json  velocity_mx64.json
data_raw_feetech/: 2024-10-26_12h23m27.json  2024-10-26_12h23m42.json  2024-10-26_12h24m55.json  2024-10-26_12h27m27.json
docs/: Makefile  conf.py  index.rst  requirements.txt  watch.sh
docs/_static/: bam.css  motor_examples.js
docs/api/: core.rst  hardware.rst  index.rst
docs/identification/: acquisition.rst  actuator_modeling.rst  contributing.rst  fitting.rst  index.rst  pipeline.rst  setup.rst
docs/theory/: dc_motor.rst  index.rst  models.rst  theory.rst
docs/usage/: actuators.rst  examples.rst  index.rst  mjlab_gpu.rst  mujoco_cpu.rst
dynamixel/: all_record.py  record.py
erob/: all_record.py  etherban.py  record.py  static.py
linear/: dynamic.py
network/: compare_logs.py  dataset.py  friction_net.py  learn.py  train.sh
params/erob80_100/: m1.json  m2.json  m4.json
params/erob80_50/: m1.json  m2.json  m3.json  m4.json  m5.json  m6.json
params/feetech/: m6.json
params/feetech_sts3215_12V/: m1.json
rham/: actuator.py  drive_backdrive.py  fit.py  logs.py  model.py  mujoco.py  plot.py  simulate.py
(+223 files in other folders)
