[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "better-actuator-models"
version = "1.0.0"
description = "BAM: Better Actuator Models is a Python library dedicated to the identification and simulation of advanced actuator models."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Marc Duclusaud" },
    { name = "Grégoire Passault" },
]
keywords = ["robot", "robotics", "actuator", "simulation", "friction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "colorama",
]

[project.optional-dependencies]
# Use identified models in a MuJoCo (CPU) simulation.
mujoco = [
    "mujoco",
]
# Use identified models in MuJoCo Warp via mjlab (GPU).
mjlab = [
    "mjlab>=1.3,<1.4",
]
# Identify your own motors: hardware drivers, optimization, logging, plotting.
identification = [
    "zmq",
    "protobuf>=3.20,<4.0",
    "dynamixel_sdk",
    "rustypot>=1.5.0",
    "optuna",
    "cmaes",
    "wandb",
    "matplotlib",
]
# Everything at once.
all = [
    "better-actuator-models[mujoco,mjlab,identification]",
]

[project.urls]
Homepage = "https://github.com/Rhoban/bam"
Repository = "https://github.com/Rhoban/bam"

[tool.setuptools.packages.find]
include = ["bam*"]

[tool.setuptools.package-data]
bam = ["params/**/*.json"]
